Challenges/force-app/main/default/objects/Account/fields/Account_Country_Valid__c.field-meta.xml
<CustomField>
    <fullName>Account_Country_Valid__c</fullName>
    <formula>OR(Canada_Based__c = TRUE, USA_Based__c = TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Country Valid</label>
    <type>Checkbox</type>
</CustomField>