Challenges/force-app/main/default/objects/Account/fields/Canada_Based__c.field-meta.xml
<CustomField>
    <fullName>Canada_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canada Based</label>
    <type>Checkbox</type>
</CustomField>