Challenges/force-app/main/default/objects/Account/fields/USA_Based__c.field-meta.xml
<CustomField>
    <fullName>USA_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>USA Based</label>
    <type>Checkbox</type>
</CustomField>