Challenges/force-app/main/default/objects/Account/validationRules/Account_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Name) &lt;3</errorConditionFormula>
    <errorMessage>Name should be atleast 3 characters</errorMessage>
</ValidationRule>