Challenges/force-app/main/default/objects/Account/validationRules/SAME_YEAR.validationRule-meta.xml
<ValidationRule>
    <fullName>SAME_YEAR</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(SLAExpirationDate__c)),
NOT(YEAR(TODAY())= YEAR(SLAExpirationDate__c)))</errorConditionFormula>
    <errorMessage>SAME YEAR</errorMessage>
</ValidationRule>